--- a/ZenID Extension/overlay.css
+++ b/ZenID Extension/overlay.css
@@ -6,5 +6,7 @@ iframe#password_overlay{
     width: 100%;
     height: 100%;
     z-index: 2147483646;
-    background-color: rgba(245,245,245,0.8);
+    background-color: rgba(36,48,53,0.9);
+    /*background-color: rgba(240,240,240,0.9);*/
+
 }
